--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <header id="top">
+    <!-- Menu settings -->
     <div class="wrapper">
         <a href="{{ site.baseurl }}/" class="brand">{{ site.title }}</a>
         <small>{{site.brief-intro}}</small>
